# graded

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  default.nix  graded-functors.cabal
.github/workflows/: haskell-ci.yml
src/Data/Functor/: Graded.hs
