cabal-version:      2.2
name:               graded-functors
version:            0.1.0.0
synopsis:           Graded functors
description:        Graded semigroups, monoids, and groups
homepage:           https://github.com/emilypi/graded-functors
bug-reports:        https://github.com/emilypi/graded-functors/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         Emily Pillmore <emilypi@cohomolo.gy>
copyright:          (c) 2021 Emily Pillmore
category:           Data, Math, Groups, Functors, Algebra
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.1

source-repository head
  type:     git
  location: https://github.com/emilypi/graded-functors.git

library
  exposed-modules:  Data.Functor.Graded
  build-depends:
    , base                 >=4.10 && <5
    , containers           ^>=0.6
    , groups               ^>=0.5
    , indexed-traversable  ^>=0.1
    , unordered-containers ^>=0.2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
